changed index.html h2 tags to section tags.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </header>
 
   <main>
-    <h2>Ingredients</h2>
+    <section>Ingredients</section>
 
     <ul>
       <li>2-3 large eggs</li>
@@ -40,7 +40,7 @@
       <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
     </ul>
 
-    <h2>Instructions</h2>
+    <section>Instructions</section>
 
     <ol>
       <li>
@@ -73,7 +73,7 @@
 
     </ol>
 
-    <h2>Nutrition</h2>
+    <section>Nutrition</section>
 
     <table>
       <caption>The table below shows nutritional values per serving without the additional fillings.</caption>
